# onnx_wrapper

./: .gitignore  CMakeLists.txt  README.md  main.cpp  onnx_config.yaml
models/: script.onnx  trace.onnx
src/: main.cpp  onnx_config.yaml  onnx_wrapper.cpp  onnx_wrapper.h
